src/css/editable.less
.mathquill-editable {
  .inline-block;

  .cursor {
    margin-right: -1px;
    position: relative;
    z-index: 1;
    padding: 0;
    .inline-block;

    .line { border-left: 1px solid black; }
    &.blink .line { visibility: hidden; }

    .handle {
      display: inline-block;
      -webkit-transform-origin: 0.5px bottom;
      -webkit-transform: translateX(-.5px);
      &:before, &:after {
        content: '';
        position: absolute;
        left: -10px;
      }
      // triangle tip
      &:before {
        border-left: 10px solid transparent;
        border-right: 10px solid transparent;
        border-bottom: 10px solid black;
        bottom: -20px;
      }
      // rectangle block/handle body
      &:after {
        width: 20px;
        height: 20px;
        background: black;
        bottom: -40px;
      }
    }
  }

  // This is a workaround to override the
  // styles on .mathquill-editable *.
  // TODO: figure out a better way.
  &, .mathquill-embedded-latex & {
    padding: 2px;
  }
// special styles for editables within static math
  .mathquill-embedded-latex & {
    margin: 1px;
  }

  ////
  // command input with \
  .latex-command-input {
    color: inherit;
    font-family: @mono;
    border: 1px solid gray;
    padding-right: 1px;
    margin-right: 1px;
    margin-left: 2px;

    &.empty {
      background: transparent;
    }

    // TODO: dasherize has-cursor
    &.hasCursor {
      border-color: ActiveBorder;
    }
  }
}

// Keeps blocks from collapsing to zero width/height
// when empty by inserting invisible text.
// TODO: find a way to unify the three concepts below.
.mathquill-editable.empty:after,
.mathquill-textbox:after,
.mathquill-rendered-math .empty:after {
  visibility: hidden;
  content: 'c';
}

// separated from above because unrecognized pseudoclasses
// invalidate the entire selector
.mathquill-editable .cursor:only-child:after,
.mathquill-editable .textarea+.cursor:last-child:after {
  visibility: hidden;
  content: 'c';
}

.mathquill-textbox {
  overflow-x: auto;

  // so IE8 won't show a vertical scrollbar
  overflow-y: hidden;
}

